Revert "Issue #1249892 by SeanBannister, Steven Jones: Fixed Checkboxes on provision page not aligned."
This reverts commit 7714e0a86a227291c1beb4fca9468ccc0eec7972.

--- a/themes/eldir/style.css
+++ b/themes/eldir/style.css
@@ -819,7 +819,7 @@ table.hosting-table th {
       padding-bottom:5px;
       }
 
-  .hosting-info-list div.form-item label {
+  body.aegir #page div.node div.content div.form-item label {
     position:absolute;
     left:0px;
     width:95px;
